# aiden-ai

./: .commit_msg.tmp  .dockerignore  .env.example  .gitignore  Dockerfile.api  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
amin-soul/: AGENTS.md  (+5 more)
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 20250124_000001_initial_multi_tenancy_rbac.py  20250124_000002_add_audit_log_table.py  20250124_000003_add_policy_profiles_table.py  20250124_000004_add_document_vault_tables.py  20250124_000005_add_document_text_extraction_tables.py  20250124_000006_add_embeddings_and_hybrid_search.py  20250124_000007_migrate_embeddings_to_native_pgvector.py  20250124_000008_add_version_indexing_status.py  20250124_000009_add_user_token_version.py  20250125_000001_add_refresh_sessions_table.py  20250125_000002_add_global_legal_corpus.py  20250127_000001_add_snapshot_import_keys.py  20260401_000001_password_global_email_default_workspace.py  20260402_000001_amin_agent_tables.py  20260402_000002_add_soul_dimensions.py  20260402_000003_add_organizations.py  20260403_000001_add_scraping_tables.py  20260403_000002_add_office_documents_and_wopi_tokens.py  20260404_000001_add_workspace_settings.py  20260406_000001_add_wiki_tables.py  20260406_000002_add_news_items_table.py  20260406_000003_add_client_case_models.py  20260409_000001_add_user_avatar_url.py
apps/api/docs/: IMPORT_CONTRACT.md
apps/api/src/: __init__.py  config.py  database.py  main.py
apps/api/src/clause_library/: __init__.py  library.py
apps/api/src/dependencies/: __init__.py  auth.py  platform_admin.py  policy.py
apps/api/src/embeddings/: __init__.py  providers.py
apps/api/src/extraction/: __init__.py  chunker.py  extractors.py
apps/api/src/harvesters/: __init__.py  http.py  instrument_type.py  models.py  storage.py
apps/api/src/llm/: __init__.py  base.py  providers.py
apps/api/tests/: conftest.py  helpers.py  test_audit.py  test_auth.py  test_bootstrap.py  test_clause_redlines.py  test_config.py  test_contract_review.py  test_cookie_auth.py  test_demo_seed_assets.py  test_documents.py  test_enterprise_hardening.py  test_exports.py  test_extraction.py  test_global_legal.py  test_global_legal_import.py  test_health.py  test_legal_research.py  test_llm_provider_relay.py  test_memberships.py  test_multi_tenancy.py  test_policy.py  test_scraping.py  test_search.py  test_unified_retrieval.py
(+369 files in other folders)
